@@ -13,6 +13,7 @@
  * Structures (.nbt files) now always have their offset guesstimated when loading them as Custom Objects, since they do not store an offset. This will increase the chance that they will be placed correctly by default
  * Some biomes have received a slightly more distinctive pattern and/or colour
  * Bug fix: fix an error that occurred when Importing Minecraft 1.12 maps with custom biomes
+ * Bug fix: creating a new Custom Layer from a renamed palette now adds it to the right palette
 
 -- Version 2.20.0, released 13-8-2023
 
